// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`session actions should create session 1`] = `
  "0": {
    "account": 0xb7237dd7dacd9da8e489b57d4631fc33342ff75f,
    "type": session/CREATE,
  },

`;

exports[`session actions should destroy session 1`] = `
  "0": {
    "type": session/DESTROY,
  },

`;

exports[`session actions should login CBE and go to default page (/cbe) 1`] = `
  "0": {
    "isCBE": true,
    "profile": {
      "assetsManager": {
      },
      "company": null,
      "email": null,
      "icon": null,
      "id": null,
      "name": null,
      "timestamp": null,
      "tokens": {
      },
      "url": null,
    },
    "type": session/PROFILE,
  },
  "1": {
    "type": WALLET/switch_wallet,
    "wallet": {
      "address": null,
      "bccAddress": null,
      "btcAddress": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMainWallet": true,
      "isMultisig": false,
      "isPending": false,
      "isTIMERequired": true,
      "nemAddress": null,
      "timeAddress": null,
      "timeDeposit": 0,
      "timestamp": null,
      "tokens": {
      },
      "transactionHash": null,
      "transactions": {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": {
        },
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
  },
  "10": {
    "payload": {
      "args": {
        "0": /dashboard,
      },
      "method": replace,
    },
    "type": @@router/CALL_HISTORY_METHOD,
  },
  "2": {
    "type": exchange/GET_DATA_START,
  },
  "3": {
    "type": exchange/EXCHANGE_GET_TOKENS_LIST_START,
  },
  "4": {
    "type": AssetsManager/GET_ASSETS_MANAGER_COUNTS_START,
  },
  "5": {
    "type": AssetsManager/GET_TRANSACTIONS_START,
  },
  "6": {
    "isInited": true,
    "type": market/INIT,
  },
  "7": {
    "type": mainWallet/TOKENS_FETCH,
  },
  "8": {
    "type": watcher/USER,
  },
  "9": {
    "type": watcher/CBE,
  },

`;

exports[`session actions should login CBE and start watcher with cbeWatcher and go to last url 1`] = `
  "0": {
    "isCBE": true,
    "profile": {
      "assetsManager": {
      },
      "company": null,
      "email": null,
      "icon": null,
      "id": null,
      "name": null,
      "timestamp": null,
      "tokens": {
      },
      "url": null,
    },
    "type": session/PROFILE,
  },
  "1": {
    "type": WALLET/switch_wallet,
    "wallet": {
      "address": null,
      "bccAddress": null,
      "btcAddress": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMainWallet": true,
      "isMultisig": false,
      "isPending": false,
      "isTIMERequired": true,
      "nemAddress": null,
      "timeAddress": null,
      "timeDeposit": 0,
      "timestamp": null,
      "tokens": {
      },
      "transactionHash": null,
      "transactions": {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": {
        },
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
  },
  "10": {
    "payload": {
      "args": {
        "0": /test-last-url,
      },
      "method": replace,
    },
    "type": @@router/CALL_HISTORY_METHOD,
  },
  "2": {
    "type": exchange/GET_DATA_START,
  },
  "3": {
    "type": exchange/EXCHANGE_GET_TOKENS_LIST_START,
  },
  "4": {
    "type": AssetsManager/GET_ASSETS_MANAGER_COUNTS_START,
  },
  "5": {
    "type": AssetsManager/GET_TRANSACTIONS_START,
  },
  "6": {
    "isInited": true,
    "type": market/INIT,
  },
  "7": {
    "type": mainWallet/TOKENS_FETCH,
  },
  "8": {
    "type": watcher/USER,
  },
  "9": {
    "type": watcher/CBE,
  },

`;

exports[`session actions should login USER and go to default url (/wallet) 1`] = `
  "0": {
    "isCBE": false,
    "profile": {
      "assetsManager": {
      },
      "company": null,
      "email": null,
      "icon": null,
      "id": null,
      "name": null,
      "timestamp": null,
      "tokens": {
      },
      "url": null,
    },
    "type": session/PROFILE,
  },
  "1": {
    "type": WALLET/switch_wallet,
    "wallet": {
      "address": null,
      "bccAddress": null,
      "btcAddress": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMainWallet": true,
      "isMultisig": false,
      "isPending": false,
      "isTIMERequired": true,
      "nemAddress": null,
      "timeAddress": null,
      "timeDeposit": 0,
      "timestamp": null,
      "tokens": {
      },
      "transactionHash": null,
      "transactions": {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": {
        },
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
  },
  "2": {
    "type": exchange/GET_DATA_START,
  },
  "3": {
    "type": exchange/EXCHANGE_GET_TOKENS_LIST_START,
  },
  "4": {
    "type": AssetsManager/GET_ASSETS_MANAGER_COUNTS_START,
  },
  "5": {
    "type": AssetsManager/GET_TRANSACTIONS_START,
  },
  "6": {
    "isInited": true,
    "type": market/INIT,
  },
  "7": {
    "type": mainWallet/TOKENS_FETCH,
  },
  "8": {
    "type": watcher/USER,
  },
  "9": {
    "payload": {
      "args": {
        "0": /dashboard,
      },
      "method": replace,
    },
    "type": @@router/CALL_HISTORY_METHOD,
  },

`;

exports[`session actions should logout 1`] = `
  "0": {
    "isInited": false,
    "type": market/INIT,
  },
  "1": {
    "payload": {
      "args": {
        "0": /,
      },
      "method": push,
    },
    "type": @@router/CALL_HISTORY_METHOD,
  },

`;
